--- a/index.html
+++ b/index.html
@@ -9,9 +9,14 @@
       body {
         background: #222;
       }
+      a {
+        color: white;
+      }
     </style>
   </head>
   <body>
+    <a href="#" class="clear-tasks">click here</a>
+    <input type="text" id="task" placeholder="Type here" autocomplete="off" />
     <script src="app.js"></script>
   </body>
 </html>
