--- a/index.html
+++ b/index.html
@@ -15,8 +15,9 @@
     </style>
   </head>
   <body>
-    <a href="#" class="clear-tasks">click here</a>
-    <input type="text" id="task" placeholder="Type here" autocomplete="off" />
+    <form name="register">
+      Enter username <input value="Username" id="name" name="name" />
+    </form>
     <script src="app.js"></script>
   </body>
 </html>
